--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "next-intl": "^4.3.4",
     "react": "19.1.0",
